Make adjustable grid with mouse hover effect.
User can enter in how big they want the etch a sketch to be. It also
fills in based on which grids the mouse hovers over.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <script src="scripts/script.js" defer></script>
     </head>
     <body>
-        Etch-a-Sketch
+        <button id="userInput">Adjust Grid Size</button>
+        <div id="container">
+
+        </div>
     </body>
 </html>
