Center entire page, style button.
Centered the content of the page and added margins to push it
away from the top of the screen. Also styled the button from the
default html styling.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         <script src="scripts/script.js" defer></script>
     </head>
     <body>
-        <button id="userInput">Adjust Grid Size</button>
-        <div id="container">
-
+        <div id="outerContainer">
+            <button id="userInput">Adjust Grid Size</button>
+            <div id="container">
+                
+            </div>
         </div>
     </body>
 </html>
